--- a/src/css/myFeed.scss
+++ b/src/css/myFeed.scss
@@ -27,3 +27,10 @@ a {
 #menu li a:hover {
   color: rgb(41, 48, 233);
 }
+
+.myfeedlink {
+  color: rgb(41, 48, 233);
+}
+.myphotolink {
+  color: black;
+}
