--- a/src/css/calendar.scss
+++ b/src/css/calendar.scss
@@ -1,3 +1,51 @@
 #root {
   padding-top: 54px;
+  .calWrapper {
+    margin: 0 auto;
+    .hoverForm {
+      border-radius: 15px;
+      z-index: 2;
+      background-color: #fff;
+      position: fixed;
+      width: 30%;
+      left: 55%;
+      margin-left: -20%; /* half of width */
+      height: 250px;
+      top: 40%;
+      margin-top: -150px; /* half of height */
+      overflow: auto;
+      .visibleBtn {
+        margin-top: 150px;
+        text-align: center;
+        button {
+          font-family: 'Dongle', sans-serif;
+        }
+      }
+      form {
+        margin-top: 40px;
+        margin-left: 70px;
+        margin-bottom: 20px;
+        tr {
+          width: 100px;
+          label {
+            font-family: 'Dongle', sans-serif;
+          }
+          input {
+            margin-right: 0;
+            margin-left: 10px;
+            font-size: 20px;
+            font-family: 'Dongle', sans-serif;
+            padding: 0 15px;
+            width: 150px;
+            height: 30px;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+          }
+        }
+      }
+    }
+    .calendar {
+      margin: 0 auto;
+    }
+  }
 }
