--- a/src/css/mainFeed.scss
+++ b/src/css/mainFeed.scss
@@ -1,16 +1,32 @@
+body {
+background-color: rgb(248, 247, 247);
+
 #root {
-  padding-top: 54px;
+  padding-top: 10px;
+}
+
+.fcinput{
+  background: transparent;
 }
 
 .mainbox {
   display:flex;
   margin:10px;
-}
+  }
 
 .mainlistbox {
   margin: 20px;
 }
 
 .fcinput {
-  margin-left: 20px;
+  margin-left: 40px;
+}
+
+.mainlistbox {border-collapse: collapse;}
+
+.fclist {
+  height:100px;
+  overflow: auto;
+}
+
 }
