--- a/src/css/editMember.scss
+++ b/src/css/editMember.scss
@@ -4,27 +4,84 @@
   .editWrapper {
     margin: 0 auto;
     .eTitle {
-      font-size: xx-large;
+      font-size: 40px;
       font-family: 'Dongle', sans-serif;
     }
     .editForm {
       font-size: 25px;
       form {
         table {
+          padding-top: 10px;
+          padding-bottom: 20px;
+          background-color: rgb(250, 247, 247);
           border: 1px solid #ccc;
-          border-radius: 5px;
+          border-radius: 8px;
           margin-left: auto;
           margin-right: auto;
-          width: 40%;
-          label {
-            font-family: 'Dongle', sans-serif;
-          }
-          input {
-            font-family: 'Dongle', sans-serif;
+          width: 30%;
+          vertical-align: top;
+          box-shadow: 1px 1px 0px 0px #cccc;
+          td {
+            margin: 0 auto;
+            :last-child {
+              margin-bottom: 5px;
+            }
+
+            img {
+              width: 70px;
+              height: 70px;
+            }
+            label {
+              margin-left: 80px;
+              display: inline-block;
+              font-family: 'Dongle', sans-serif;
+            }
+            input {
+              margin-right: 40px;
+              padding: 2px 15px;
+              font-family: 'Dongle', sans-serif;
+              font-size: 20px;
+              width: 250px;
+              border-radius: 5px;
+              border: 1px solid #ccc;
+              background-color: white;
+              :last-child {
+                margin-bottom: 15px;
+              }
+            }
+            button {
+              margin-left: -175px;
+              position: relative;
+              padding: 5px 0px;
+              background-color: transparent;
+              // border-radius: 15px;
+              // box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
+              text-decoration: none;
+              font-size: 18px;
+              transition: 0.25s;
+              border: none;
+              cursor: pointer;
+            }
           }
         }
         .eSubmit {
+          margin-top: 10px;
+          width: 100px;
+          height: 40px;
           font-family: 'Dongle', sans-serif;
+          font-size: 20px;
+          border-radius: 5px;
+          border: 1px solid #ccc;
+          background-color: white;
+          cursor: pointer;
+          &:hover {
+            background-color: rgb(0, 0, 255);
+            opacity: 0.7;
+            color: white;
+          }
+          .popup {
+            margin: 0 auto;
+          }
         }
       }
     }
