--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -22,7 +22,8 @@
         }
       }
       .logo {
-        width: 124px;
+        width: 150px;
+        height: 60px;
         display: flex;
         align-items: center;
       }
