--- a/src/css/map.scss
+++ b/src/css/map.scss
@@ -16,7 +16,7 @@
       justify-content: center;
       background: none;
       font-family: 'Dongle', sans-serif;
-      font-size: xx-large;
+      font-size: 40px;
     }
     .searchInput {
       display: flex;
