--- a/src/css/animal.scss
+++ b/src/css/animal.scss
@@ -1,3 +1,223 @@
 #root {
   padding-top: 54px;
+  .animalTitle {
+    margin: 0 auto;
+    p {
+      margin: 0px;
+      font-family: 'Dongle', sans-serif;
+      font-size: 40px;
+    }
+  }
+
+  .updateDataWrapper {
+    display: flex;
+    padding-left: 40px;
+    padding-right: 40px;
+    .updateData {
+      margin-left: 20px;
+
+      table {
+        width: 250px;
+        border: 1px solid rgb(180, 179, 179);
+        border-radius: 10px;
+        font-family: 'Dongle', sans-serif;
+        font-size: 25px;
+        background-color: #fff;
+        tr {
+          td {
+            margin: 0;
+            padding-left: 10px;
+            padding-right: 10px;
+            .deleteData {
+              padding: 0;
+              background-color: transparent;
+              text-decoration: none;
+              font-size: 18px;
+              transition: 0.25s;
+              border: none;
+              cursor: pointer;
+            }
+            img {
+              width: 250px;
+              height: 250px;
+              border-radius: 10px;
+              border: 1px solid #ccc;
+            }
+          }
+        }
+      }
+    }
+    .addForm {
+      // margin-top: 180px;
+      margin-left: 20px;
+      input {
+        width: 250px;
+        height: 475px;
+        border: 1px solid rgb(180, 179, 179);
+        border-radius: 10px;
+        font-family: 'Dongle', sans-serif;
+        font-size: 35px;
+        &:hover {
+          background-color: rgb(156, 156, 248);
+          opacity: 0.7;
+          color: white;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+  .hoverForm {
+    padding-top: 20px;
+    padding-left: 50px;
+    border-radius: 15px;
+    z-index: 2;
+    background-color: #fff;
+    position: fixed;
+    width: 290px;
+    left: 60%;
+    margin-left: -20%; /* half of width */
+    height: 360px;
+    top: 375px;
+    margin-top: -150px; /* half of height */
+    overflow: auto;
+    font-family: 'Dongle', sans-serif;
+    // box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.5);
+    box-shadow: 0px 1px 0px 0px #ccc;
+
+    tr {
+      width: 100px;
+      td {
+        margin-bottom: 5px;
+        text-align: center;
+        label {
+          font-family: 'Dongle', sans-serif;
+          font-size: 20px;
+        }
+        input {
+          margin-right: 0;
+          margin-left: 10px;
+          font-size: 20px;
+          font-family: 'Dongle', sans-serif;
+          padding: 0 15px;
+          width: 150px;
+          height: 30px;
+          border: 1px solid #ccc;
+          border-radius: 3px;
+        }
+        .colorInput {
+          width: 182px;
+        }
+        .submitBtn {
+          margin-left: 30px;
+          margin-top: 20px;
+          &:hover {
+            background-color: rgb(0, 0, 255);
+            opacity: 0.7;
+            color: white;
+            cursor: pointer;
+          }
+        }
+        .cancelBtn {
+          margin-left: 30px;
+          &:hover {
+            background-color: orange;
+            opacity: 0.7;
+            color: white;
+            cursor: pointer;
+          }
+        }
+        .deleteBtn {
+          margin-left: 35px;
+          &:hover {
+            background-color: red;
+            opacity: 0.7;
+            color: white;
+            cursor: pointer;
+          }
+        }
+      }
+      .select {
+        padding: 15px 10px;
+        margin-right: -15px;
+      }
+      .select input[type='radio'] {
+        display: none;
+      }
+      .select input[type='radio'] + label {
+        display: inline-block;
+        cursor: pointer;
+        height: 28px;
+        width: 89px;
+        border: 1px solid #ccc;
+        line-height: 30px;
+        text-align: center;
+        font-size: 18px;
+        border-radius: 3px;
+      }
+      .select input[type='radio'] + label {
+        background-color: #fff;
+        color: #333;
+      }
+      .select input[type='radio']:checked + label {
+        background-color: rgb(0, 0, 255);
+        opacity: 0.7;
+        color: white;
+      }
+      .selectSpecies {
+        margin-left: 10px;
+        margin-bottom: 12px;
+        font-size: 20px;
+        font-family: 'Dongle', sans-serif;
+        padding: 0 15px;
+        width: 182px;
+        height: 33px;
+        border: 1px solid #ccc;
+        border-radius: 3px;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        cursor: pointer;
+      }
+      .nameLabel {
+        text-align: right;
+      }
+    }
+    .fileBox {
+      margin-top: 15px;
+      padding-left: 40px;
+      margin-bottom: 15px;
+      label {
+        text-align: center;
+        display: inline-block;
+        padding: 0.5em 0.75em;
+        font-size: 20px;
+        line-height: 20px;
+        vertical-align: middle;
+        background-color: #fdfdfd;
+        cursor: pointer;
+        border: 1px solid #ebebeb;
+        border-bottom-color: #e2e2e2;
+        border-radius: 0.25em;
+        width: 150px;
+        height: 15px;
+        &:hover {
+          background-color: rgb(0, 0, 255);
+          opacity: 0.7;
+          color: white;
+          cursor: pointer;
+        }
+      }
+      input[type='file'] {
+        /* 파일 필드 숨기기 */
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        padding: 0;
+        margin: -1px;
+        overflow: hidden;
+        clip: rect(0, 0, 0, 0);
+        border: 0;
+      }
+    }
+  }
 }
