--- a/src/css/Fcommant.scss
+++ b/src/css/Fcommant.scss
@@ -1,4 +1,9 @@
 .fcommantlist {
-   border-collapse: collapse;
+   // border-collapse: collapse;
    
+}
+
+.fccbox {
+   border: 1px solid black;
+   border-radius: 10px;
 }
