--- a/src/css/mainFeed.scss
+++ b/src/css/mainFeed.scss
@@ -10,23 +10,39 @@ background-color: rgb(248, 247, 247);
 }
 
 .mainbox {
-  display:flex;
+display: inline-block;
   margin:20px;
+  width: 440px;
+  height: 300px;
+  overflow: auto;
   }
+
+.mainfeedbox {
+
+}
 
 .mainlistbox {
   margin-right: 20px;
-  border-collapse: collapse;
+  border: 1px solid black;
+  // border-radius: 10px;
+  // border-collapse: collapse;
 }
 
 .fcinput {
   margin-left: 40px;
   border-radius: 10px;
+
 }
 
 .fclist {
   height:100px;
+  width:420px;
   overflow: auto;
+}
+
+.mainfcbox {
+  border: 1px solid black;
+  border-radius: 10px;
 }
 
 }
