css 피드백 수정

--- a/src/css/calendar.scss
+++ b/src/css/calendar.scss
@@ -9,119 +9,121 @@ body {
     .calWrapper {
       margin: 0 auto;
 
-      .hidden {
-        display: none;
-      }
-      .visibleBtn {
-        margin-bottom: -50px;
-        text-align: center;
-        p {
-          font-family: 'Dongle', sans-serif;
-          font-size: 40px;
-          margin: 0;
-        }
-        button {
-          margin-top: 10px;
-          font-family: 'Dongle', sans-serif;
-          font-size: 28px;
-          padding: 0 15px;
-          width: 150px;
-          height: 42px;
-          border: 1px solid #ccc;
-          border-radius: 3px;
-          &:hover {
-            background-color: rgb(0, 0, 255);
-            opacity: 0.7;
-            color: white;
-            cursor: pointer;
-          }
-        }
-      }
-      .hoverForm {
-        padding-top: 20px;
-        padding-left: 50px;
-        border-radius: 15px;
-        z-index: 2;
-        background-color: #fff;
-        position: fixed;
-        width: 325px;
-        left: 60%;
-        margin-left: -20%; /* half of width */
-        height: 280px;
-        top: 375px;
-        margin-top: -150px; /* half of height */
-        overflow: auto;
-        font-family: 'Dongle', sans-serif;
-        // box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.5);
-        box-shadow: 0px 1px 0px 0px #ccc;
-
-        tr {
-          width: 100px;
-          td {
-            margin-bottom: 5px;
-            text-align: center;
-            label {
-              font-family: 'Dongle', sans-serif;
-              font-size: 20px;
-            }
-            input {
-              margin-right: 0;
-              margin-left: 10px;
-              font-size: 20px;
-              font-family: 'Dongle', sans-serif;
-              padding: 0 15px;
-              width: 150px;
-              height: 30px;
-              border: 1px solid #ccc;
-              border-radius: 3px;
-            }
-            .colorInput {
-              width: 182px;
-            }
-            .submitBtn {
-              margin-left: 35px;
-              margin-top: 10px;
-              &:hover {
-                background-color: rgb(0, 0, 255);
-                opacity: 0.7;
-                color: white;
-                cursor: pointer;
-              }
-            }
-            .cancelBtn {
-              margin-left: 35px;
-              &:hover {
-                background-color: orange;
-                opacity: 0.7;
-                color: white;
-                cursor: pointer;
-              }
-            }
-            .deleteBtn {
-              margin-left: 35px;
-              &:hover {
-                background-color: red;
-                opacity: 0.7;
-                color: white;
-                cursor: pointer;
-              }
-            }
-          }
-          .nameLabel {
-            text-align: right;
-          }
-        }
-      }
       .calendar {
         z-index: 1;
         margin: 0 auto;
         // background-color: rgb(248, 247, 247);
       }
     }
-    // .blur {
-    //   z-index: 1;
-    //   box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.5);
-    //   filter: blur(15px);
-    // }
+    .blur {
+      z-index: 1;
+      box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.5);
+      filter: blur(5px);
+    }
+    .visibleBtn {
+      z-index: 3;
+      margin-bottom: -50px;
+      text-align: center;
+      p {
+        font-family: 'Dongle', sans-serif;
+        font-size: 40px;
+        margin: 0;
+      }
+      button {
+        margin-top: 10px;
+        font-family: 'Dongle', sans-serif;
+        font-size: 28px;
+        padding: 0 15px;
+        width: 150px;
+        height: 42px;
+        border: 1px solid #ccc;
+        border-radius: 3px;
+        background-color: rgba(152, 152, 255, 0.179);
+        &:hover {
+          background-color: rgb(0, 0, 255);
+          opacity: 0.5;
+          color: white;
+          cursor: pointer;
+        }
+      }
+    }
+    .hidden {
+      display: none;
+    }
+    .hoverForm {
+      padding-top: 20px;
+      padding-left: 50px;
+      border-radius: 15px;
+      z-index: 2;
+      background-color: #fff;
+      position: fixed;
+      width: 325px;
+      left: 60%;
+      margin-left: -20%; /* half of width */
+      height: 280px;
+      top: 375px;
+      margin-top: -150px; /* half of height */
+      overflow: auto;
+      font-family: 'Dongle', sans-serif;
+      // box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.5);
+      box-shadow: 0px 1px 0px 0px #ccc;
+
+      tr {
+        width: 100px;
+        td {
+          margin-bottom: 5px;
+          text-align: center;
+          label {
+            font-family: 'Dongle', sans-serif;
+            font-size: 20px;
+          }
+          input {
+            margin-right: 0;
+            margin-left: 10px;
+            font-size: 20px;
+            font-family: 'Dongle', sans-serif;
+            padding: 0 15px;
+            width: 150px;
+            height: 30px;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+          }
+          .colorInput {
+            width: 182px;
+          }
+          .submitBtn {
+            margin-left: 35px;
+            margin-top: 10px;
+            &:hover {
+              background-color: rgb(0, 0, 255);
+              opacity: 0.5;
+              color: white;
+              cursor: pointer;
+            }
+          }
+          .cancelBtn {
+            margin-left: 35px;
+            &:hover {
+              background-color: orange;
+              opacity: 0.5;
+              color: white;
+              cursor: pointer;
+            }
+          }
+          .deleteBtn {
+            margin-left: 35px;
+            &:hover {
+              background-color: red;
+              opacity: 0.5;
+              color: white;
+              cursor: pointer;
+            }
+          }
+        }
+        .nameLabel {
+          text-align: right;
+        }
+      }
+    }
   }
 }
