--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300;400&display=swap');
 .App {
   font-family: 'Dongle', sans-serif;
+  width: 1200px;
+  margin: 0 auto;
 }
