--- a/src/css/map.scss
+++ b/src/css/map.scss
@@ -66,12 +66,12 @@
         height: 40px;
         border-radius: 5px;
         border: 0.5px solid #ccc;
-        background-color: #fff;
+        background-color: rgba(152, 152, 255, 0.179);
         margin-right: 5px;
         cursor: pointer;
         &:hover {
           background-color: rgb(0, 0, 255);
-          opacity: 0.7;
+          opacity: 0.4;
           color: white;
         }
       }
