--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,9 @@
 .App {
   font-family: 'Dongle', sans-serif;
   width: 1200px;
+  height: 90vh;
   margin: 0 auto;
+  background-color: rgb(248, 247, 247);
+  border-right: 1px solid rgba(204, 204, 204, 0.456);
+  border-left: 1px solid rgba(204, 204, 204, 0.456);
 }
