--- a/src/css/editMember.scss
+++ b/src/css/editMember.scss
@@ -5,6 +5,11 @@
     .eTitle {
       font-size: 40px;
       font-family: 'Dongle', sans-serif;
+      p {
+        margin: 0px;
+        margin-top: 30px;
+        margin-bottom: 15px;
+      }
     }
     .editForm {
       font-size: 25px;
