--- a/src/css/animal.scss
+++ b/src/css/animal.scss
@@ -2,11 +2,14 @@
   margin-top: 54px;
   .animalTitle {
     margin: 0 auto;
+    margin-top: 30px;
+
     p {
       margin-top: 0px;
       margin-bottom: 10px;
       font-family: 'Dongle', sans-serif;
       font-size: 40px;
+      margin-bottom: 15px;
     }
   }
   .blur {
@@ -17,6 +20,7 @@
 
   .updateDataWrapper {
     display: flex;
+    flex-flow: row wrap;
     padding-left: 40px;
     padding-right: 40px;
     .updateData {
@@ -24,13 +28,13 @@
 
       .animalName {
         text-align: center;
-        font-size: 45px;
+        font-size: 35px;
         height: 50px;
         p {
-          width: 50px;
+          width: 200px;
           margin-bottom: 0;
           margin-top: 0;
-          margin-left: 90px;
+          margin-left: 15px;
           // margin-left: 90px;
           // margin-top: 0;
           // margin-bottom: 0px;
@@ -106,21 +110,32 @@
     width: 400px;
     left: 60%;
     margin-left: -22%; /* half of width */
-    height: 380px;
+    height: 600px;
     top: 375px;
     margin-top: -190px; /* half of height */
     overflow: auto;
     font-family: 'Dongle', sans-serif;
     // box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.5);
     box-shadow: 0px 1px 0px 0px #ccc;
+    .preview {
+      margin-left: 10px;
+      img {
+        border-radius: 5px;
+        width: 260px;
+        height: 250px;
+        object-fit: cover;
+      }
+    }
     table {
-      margin: 0 auto;
+      // margin: 0 auto;
+      margin-left: 70px;
       tr {
         width: 100px;
         td {
           margin-bottom: 5px;
           text-align: center;
           label {
+            margin-right: 20px;
             font-family: 'Dongle', sans-serif;
             font-size: 20px;
           }
@@ -139,7 +154,7 @@
             width: 182px;
           }
           .submitBtn {
-            margin-left: 30px;
+            margin-right: 20px;
             margin-top: 20px;
             background-color: rgba(152, 152, 255, 0.179);
             &:hover {
@@ -150,7 +165,7 @@
             }
           }
           .cancelBtn {
-            margin-left: 30px;
+            margin-right: 20px;
             background-color: rgba(152, 152, 255, 0.179);
             &:hover {
               background-color: orange;
@@ -162,12 +177,13 @@
         }
         .select {
           padding: 15px 10px;
-          margin-right: -11px;
+          margin-left: 10px;
         }
         .select input[type='radio'] {
           display: none;
         }
         .select input[type='radio'] + label {
+          margin-right: 0;
           display: inline-block;
           cursor: pointer;
           height: 28px;
@@ -208,21 +224,21 @@
       }
       .fileBox {
         label {
-          margin-left: 43px;
+          margin-right: 40px;
           margin-bottom: 10px;
           text-align: center;
           display: inline-block;
           padding: 0.5em 0.75em;
           font-size: 20px;
-          line-height: 20px;
+          line-height: 15px;
           vertical-align: middle;
           background-color: rgba(152, 152, 255, 0.179);
           cursor: pointer;
           border: 1px solid #ebebeb;
           border-bottom-color: #e2e2e2;
           border-radius: 0.25em;
-          width: 150px;
-          height: 15px;
+          width: 50px;
+          height: 10px;
           &:hover {
             background-color: rgb(0, 0, 255);
             opacity: 0.5;
