--- a/src/css/calendar.scss
+++ b/src/css/calendar.scss
@@ -2,9 +2,9 @@
   // padding-top: 50px;
   .calWrapper {
     margin: 0 auto;
+    z-index: 2;
 
     .calendar {
-      z-index: 1;
       margin: 0 auto;
       // background-color: rgb(248, 247, 247);
     }
@@ -22,6 +22,8 @@
       font-family: 'Dongle', sans-serif;
       font-size: 40px;
       margin: 0;
+      margin-top: 30px;
+      margin-bottom: 15px;
     }
     button {
       margin-top: 10px;
@@ -55,7 +57,7 @@
     left: 60%;
     margin-left: -20%; /* half of width */
     height: 280px;
-    top: 375px;
+    top: 400px;
     margin-top: -150px; /* half of height */
     overflow: auto;
     font-family: 'Dongle', sans-serif;
