--- a/src/css/map.scss
+++ b/src/css/map.scss
@@ -5,6 +5,8 @@
     align-items: center;
     justify-content: center;
     .headers {
+      margin-top: 30px;
+      margin-bottom: 15px;
       height: 40px;
       display: flex;
       align-items: center;
