--- a/src/css/myFeed.scss
+++ b/src/css/myFeed.scss
@@ -8,19 +8,26 @@ li {
 
 a {
   text-decoration: none;
-  padding-right: 10px;
+  // padding-right: 10px;
   color: black;
+}
+
+p {
+margin-top: 30px;
+margin-bottom: 15px;
+font-family: 'Dongle', sans-serif;
+font-size: 40px;
 }
 
 #menu {
   font-size: 20px;
-  font-weight: bold;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   display: flex;
   justify-content: center;
 }
 
 #menu li a {
+      margin: 0 auto;
   margin-right: 92px;
 }
 
