--- a/src/css/myFeedWrite.scss
+++ b/src/css/myFeedWrite.scss
@@ -1,34 +1,9 @@
-.MyFeedWrite {
-    text-align: center;
+
+.myfeedwrite {
+    border: 1px solid black;
+    border-collapse: collapse;
 }
 
-.write-container {
-    margin: 0 auto;
-    width: 80%;
-    border: 1px solid #333;
-    padding: 10px 0 30px 0;
-    border-radius: 5px;
-    margin-bottom: 50px;
-}
+.myfeeinput {
 
-.form-wrapper {
-    width: 80%;
-    margin: 0 auto;
-}
-
-.title {
-    width: 80%;
-    height: 50px;
-    margin: 10px;
-    border: none;
-}
-
-
-.submit-button {
-    // width: 200px;
-    // height: 50px;
-    font-size: 20px;
-    padding: 10px;
-    border: none;
-     border-radius: 10px;
 }
