--- a/src/css/animal.scss
+++ b/src/css/animal.scss
@@ -28,13 +28,14 @@
 
       .animalName {
         text-align: center;
-        font-size: 35px;
-        height: 50px;
+        font-size: 30px;
+        height: 0px;
         p {
           width: 200px;
           margin-bottom: 0;
           margin-top: 0;
           margin-left: 15px;
+          line-height: -25px;
           // margin-left: 90px;
           // margin-top: 0;
           // margin-bottom: 0px;
@@ -72,7 +73,7 @@
               }
             }
             img {
-              margin-top: 10px;
+              margin-top: 40px;
               width: 200px;
               height: 200px;
               border-radius: 10px;
@@ -83,11 +84,12 @@
       }
     }
     .addForm {
-      margin-top: 50px;
+      margin-top: 0px;
       margin-left: 20px;
+      margin-bottom: 30px;
       input {
-        width: 200px;
-        height: 400px;
+        width: 220px;
+        height: 430px;
         border: 1px solid rgb(180, 179, 179);
         border-radius: 10px;
         font-family: 'Dongle', sans-serif;
