--- a/src/css/editMember.scss
+++ b/src/css/editMember.scss
@@ -18,14 +18,13 @@
           height: 700px;
           padding-top: 10px;
           padding-bottom: 20px;
-          background-color: rgb(250, 247, 247);
-          border: 1px solid #ccc;
-          border-radius: 8px;
+          background-color: #fff;
+          border-radius: 15px;
           margin-left: auto;
           margin-right: auto;
           width: 600px;
           vertical-align: top;
-          box-shadow: 1px 1px 0px 0px #cccc;
+          box-shadow: 0px 1px 0px 0px #ccc;
           td {
             margin: 0 auto;
             :last-child {
