--- a/src/css/myFeed.scss
+++ b/src/css/myFeed.scss
@@ -2,6 +2,7 @@
   padding-top: 54px;
 }
 li {
+  margin: 0 auto;
   float: left;
   list-style: none;
 }
@@ -12,22 +13,26 @@ a {
   color: black;
 }
 
-p {
-margin-top: 30px;
-margin-bottom: 15px;
-font-family: 'Dongle', sans-serif;
-font-size: 40px;
-}
+// p {
+// margin-top: 0;
+// margin-bottom: 15px;
+// font-family: 'Dongle', sans-serif;
+// font-size: 40px;
+// }
 
 #menu {
-  font-size: 20px;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  display: flex;
+    display: flex;
   justify-content: center;
+}
+.changeTitle{
+ margin: 0;
+ margin-top: 17px;
+font-family: 'Dongle', sans-serif;
+  font-size: 40px;
 }
 
 #menu li a {
-      margin: 0 auto;
+      // margin: 0 auto;
   margin-right: 92px;
 }
 
