--- a/src/css/myFeedWrite.scss
+++ b/src/css/myFeedWrite.scss
@@ -1,9 +1,15 @@
 
 .myfeedwrite {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
 
-.myfeeinput {
+        border-radius: 10px;
+                    background-color: #fff;
 
 }
+
+.myfeedinput {
+text-align: center;
+        border-radius: 10px;
+            border: 1px solid rgb(226, 223, 223);
+            background-color:rgb(248, 245, 245);
+}
+
