--- a/src/css/map.scss
+++ b/src/css/map.scss
@@ -48,6 +48,7 @@
           background-color: rgb(0, 0, 255);
           opacity: 0.7;
           color: white;
+          transition: 0.5s ease-out;
         }
       }
     }
@@ -70,6 +71,7 @@
           background-color: rgb(0, 0, 255);
           opacity: 0.4;
           color: white;
+          transition: 0.5s ease-out;
         }
       }
     }
