--- a/src/css/animal.scss
+++ b/src/css/animal.scss
@@ -70,6 +70,7 @@
                 opacity: 0.5;
                 color: white;
                 cursor: pointer;
+                transition: 0.5s ease-out;
               }
             }
             img {
@@ -99,6 +100,7 @@
           opacity: 0.7;
           color: white;
           cursor: pointer;
+          transition: 0.5s ease-out;
         }
       }
     }
@@ -164,6 +166,7 @@
               opacity: 0.5;
               color: white;
               cursor: pointer;
+              transition: 0.5s ease-out;
             }
           }
           .cancelBtn {
@@ -174,6 +177,7 @@
               opacity: 0.5;
               color: white;
               cursor: pointer;
+              transition: 0.5s ease-out;
             }
           }
         }
@@ -246,6 +250,7 @@
             opacity: 0.5;
             color: white;
             cursor: pointer;
+            transition: 0.5s ease-out;
           }
         }
         input[type='file'] {
