--- a/src/css/editMember.scss
+++ b/src/css/editMember.scss
@@ -82,6 +82,7 @@
             background-color: rgb(0, 0, 255);
             opacity: 0.5;
             color: white;
+            transition: 0.5s ease-out;
           }
           .popup {
             margin: 0 auto;
