--- a/src/css/myFeedWrite.scss
+++ b/src/css/myFeedWrite.scss
@@ -11,5 +11,7 @@ text-align: center;
         border-radius: 10px;
             border: 1px solid rgb(226, 223, 223);
             background-color:rgb(248, 245, 245);
+        font-family: 'Dongle', sans-serif;
+        font-size: 20px;
 }
 
