--- a/src/css/Fcommant.scss
+++ b/src/css/Fcommant.scss
@@ -1,9 +1,25 @@
 .fcommantlist {
-   // border-collapse: collapse;
+   width: 600px;
+   border-bottom: 5px solid #fff;
    
 }
 
+.idbox {
+      background-color: #fff;
+         border-radius: 60px;
+         height: 60px;
+         width: 60px;
+}
 .fccbox {
-   border: 1px solid black;
+
+         background-color: rgb(248, 245, 245);
    border-radius: 10px;
+   width: 400px;
+   float: left;
+   font-size: 25px;
+}
+
+.fcdbox {
+font-size: 15px;
+      border-radius: 10px;
 }
