--- a/src/css/mainFeed.scss
+++ b/src/css/mainFeed.scss
@@ -12,6 +12,14 @@ p {
   font-size: 40px;
 }
 
+.imagebox {
+  display: inline-block;
+  margin: 10px;
+  border: 1px solid black;
+  height:260px;
+  width:180px;
+}
+
 .fcinput{
   background: transparent;
 }
@@ -19,8 +27,8 @@ p {
 .mainbox {
 display: inline-block;
   margin:20px;
-  width: 440px;
-  height: 300px;
+  width: 710px;
+  height: 200px;
   overflow: auto;
   }
 
@@ -32,14 +40,14 @@ display: inline-block;
         .mainbox::-webkit-scrollbar-thumb {
       height: 30%;
       /* 스크롤바의 길이 */
-      background: #217af4;
+      background: rgb(248, 245, 245);
       /* 스크롤바의 색상 */
   
       border-radius: 10px;
     }
   
      .mainbox::-webkit-scrollbar-track {
-      background: rgba(33, 122, 244, .1);
+      background: rgb(248, 245, 245);
       /*스크롤바 뒷 배경 색상*/
     }
 
@@ -49,20 +57,34 @@ display: inline-block;
 
 .mainlistbox {
   margin-right: 20px;
-  border: 1px solid black;
-  // border-radius: 10px;
+  // border: 1px solid black;
+  background-color: #fff;
+  border-radius: 10px;
   // border-collapse: collapse;
 }
 
+.mainuserid {
+    background-color: rgb(248, 245, 245);
+      border-radius: 80px;
+      height: 80px;
+      width: 80px;
+}
+
+.mainfcbox {
+          border: none;
+}
+.fccommant {
+
+}
+
 .fcinput {
-  margin-left: 40px;
   border-radius: 10px;
 
 }
 
 .fclist {
   height:100px;
-  width:420px;
+  width:650px;
   overflow: auto;
 }
 
@@ -74,21 +96,18 @@ display: inline-block;
 .fclist::-webkit-scrollbar-thumb {
   height: 30%;
   /* 스크롤바의 길이 */
-  background: #217af4;
+  background: rgb(248, 245, 245);;
   /* 스크롤바의 색상 */
 
   border-radius: 10px;
 }
 
 .fclist::-webkit-scrollbar-track {
-  background: rgba(33, 122, 244, .1);
+  background: rgb(248, 245, 245);;
   /*스크롤바 뒷 배경 색상*/
 }
 
 
-.mainfcbox {
-  border: 1px solid black;
-  border-radius: 10px;
-}
+
 
 }
