--- a/src/css/myFeedList.scss
+++ b/src/css/myFeedList.scss
@@ -1,8 +1,27 @@
-.list-container {
-    margin: 0 auto;
-    width: 80%;
-    border: 1px solid #333;
-    padding: 10px 0 30px 0;
+
+.myfeedlistbox {
+    margin:0 auto;
+    display: block;
+    width: 720px;
+    height: 350px;
+    overflow: auto;
+}
+
+.myfeedlistbox::-webkit-scrollbar {
+    width: 10px;
+    /* 스크롤바의 너비 */
+}
+
+.myfeedlistbox::-webkit-scrollbar-thumb {
+    height: 30%;
+    /* 스크롤바의 길이 */
+    background: rgb(248, 245, 245);
+    /* 스크롤바의 색상 */
+
     border-radius: 10px;
-    margin-bottom: 50px;
+}
+
+.myfeedlistbox::-webkit-scrollbar-track {
+    background: rgb(248, 245, 245);
+    /*스크롤바 뒷 배경 색상*/
 }
