--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300;400&display=swap');
+
 .App {
   font-family: 'Dongle', sans-serif;
   width: 1200px;
-  height: 90vh;
+  height: 100%;
   margin: 0 auto;
   background-color: rgb(248, 247, 247);
   /* border-right: 1px solid rgba(204, 204, 204, 0.456);
