--- a/src/css/Fcommant.scss
+++ b/src/css/Fcommant.scss
@@ -1,18 +1,25 @@
+.fcommant {
+      margin-bottom: 10px;
+}
+
 .fcommantlist {
-   width: 600px;
-   border-bottom: 5px solid #fff;
+   width: 705px;
+   margin-left: -5px;
+      background-color: #fff;
+//    border-bottom: 5px solid #fff;
    
 }
 
 .idbox {
-      background-color: #fff;
+      background-color: rgb(248, 245, 245);
          border-radius: 60px;
          height: 60px;
          width: 60px;
+         margin-left: 10px;
 }
 .fccbox {
 
-         background-color: rgb(248, 245, 245);
+         background-color:#fff;;
    border-radius: 10px;
    width: 400px;
    float: left;
