--- a/src/css/swiper-styles.css
+++ b/src/css/swiper-styles.css
@@ -25,7 +25,7 @@ body {
 .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #fff;
+    /* background: #fff; */
 
     /* Center slide text vertically */
     display: -webkit-box;
@@ -45,7 +45,7 @@ body {
 .swiper-slide img {
     display: block;
     /* object-fit: fill; */
-    width: 100%;
-    height: 100%;
+    width: 180px;
+    height: 240px;
     object-fit: cover;
 }
