--- a/src/css/animal.scss
+++ b/src/css/animal.scss
@@ -21,15 +21,16 @@
   .updateDataWrapper {
     display: flex;
     flex-flow: row wrap;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 60px;
+    // padding-right: 40px;
     .updateData {
       margin-left: 20px;
+      margin-bottom: 40px;
 
       .animalName {
         text-align: center;
         font-size: 30px;
-        height: 0px;
+        height: 5px;
         p {
           width: 200px;
           margin-bottom: 0;
