--- a/src/css/Fcommant.scss
+++ b/src/css/Fcommant.scss
@@ -1,10 +1,12 @@
 .fcommant {
+      display:block;
+      margin-top: 40px;
       margin-bottom: 10px;
 }
 
 .fcommantlist {
-   width: 705px;
-   margin-left: -5px;
+   width: 700px;
+//    margin-left: -5px;
       background-color: #fff;
 //    border-bottom: 5px solid #fff;
    
@@ -15,7 +17,7 @@
          border-radius: 60px;
          height: 60px;
          width: 60px;
-         margin-left: 10px;
+      //    margin-left: 10px;
 }
 .fccbox {
 
