--- a/src/css/mainFeed.scss
+++ b/src/css/mainFeed.scss
@@ -12,7 +12,7 @@ p {
 }
 .fccommant {
   background-color: #fff;
-  margin-left: -5px;
+  // margin-left: -5px;
 }
 
 .fcinput{
@@ -30,38 +30,41 @@ p {
 }
 
 .mainbox {
-display: inline-block;
-  margin:20px;
-  width: 710px;
-  height: 200px;
-  overflow: auto;
+// display: block;
+  // margin:20px;
+  margin: auto;
+  width: 700px;
+  // height: 200px;
+  // overflow: auto;
   }
 
-        .mainbox::-webkit-scrollbar {
-      width: 0px;
-      /* 스크롤바의 너비 */
-    }
+    //     .mainbox::-webkit-scrollbar {
+    //   width: 0px;
+    //   /* 스크롤바의 너비 */
+    // }
   
-        .mainbox::-webkit-scrollbar-thumb {
-      height: 30%;
-      /* 스크롤바의 길이 */
-      background: rgb(248, 245, 245);
-      /* 스크롤바의 색상 */
+    //     .mainbox::-webkit-scrollbar-thumb {
+    //   height: 30%;
+    //   /* 스크롤바의 길이 */
+    //   background: rgb(248, 245, 245);
+    //   /* 스크롤바의 색상 */
   
-      border-radius: 10px;
-    }
+    //   border-radius: 10px;
+    // }
   
-     .mainbox::-webkit-scrollbar-track {
-      background: rgb(248, 245, 245);
-      /*스크롤바 뒷 배경 색상*/
-    }
+    //  .mainbox::-webkit-scrollbar-track {
+    //   background: rgb(248, 245, 245);
+    //   /*스크롤바 뒷 배경 색상*/
+    // }
 
 .mainfeedbox {
+  display: inline-block;
  margin-bottom: 40px;
 }
 
 .mainlistbox {
   // margin-right: 20px;
+  // padding-right: 10px;
   // border: 1px solid black;
   background-color: #fff;
   // border-radius: 10px;
@@ -82,29 +85,30 @@ display: inline-block;
 
 .fclist {
   // margin-left: 20px;
-  height:100px;
+  display:block;
+  // height:100px;
   width:100%;
-  overflow: auto;
+  // overflow: auto;
 }
 
-.fclist::-webkit-scrollbar {
-  width:0px;
-  /* 스크롤바의 너비 */
-}
+// .fclist::-webkit-scrollbar {
+//   width:0px;
+//   /* 스크롤바의 너비 */
+// }
 
-.fclist::-webkit-scrollbar-thumb {
-  height: 30%;
-  /* 스크롤바의 길이 */
-  background: rgb(248, 245, 245);;
-  /* 스크롤바의 색상 */
+// .fclist::-webkit-scrollbar-thumb {
+//   height: 30%;
+//   /* 스크롤바의 길이 */
+//   background: rgb(248, 245, 245);;
+//   /* 스크롤바의 색상 */
 
-  border-radius: 10px;
-}
+//   border-radius: 10px;
+// }
 
-.fclist::-webkit-scrollbar-track {
-  background: rgb(248, 245, 245);;
-  /*스크롤바 뒷 배경 색상*/
-}
+// .fclist::-webkit-scrollbar-track {
+//   background: rgb(248, 245, 245);;
+//   /*스크롤바 뒷 배경 색상*/
+// }
 
 
 
